PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-140_if_else_brackets_invalid1/gcc-compile.txt
input.c:6:5: error: expected expression
    else {
    ^
input.c:11:28: error: expected '}'
//expected result : invalid
                           ^
input.c:1:12: note: to match this '{'
int main (){
           ^
2 errors generated.

return code: 1
